[metadata]
name = utoolbox
author = Liu, Yen-Ting
author-email = windows.linux.mac@gmail.com
summary = A Python image processing package for LLSM.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/liuyenting/utoolbox
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Attribution Assurance License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    microscopy

[files]
packages =
    utoolbox
